// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grommet hpe theme renders 1`] = `
.c0 {
  font-family: 'Metric', Arial, sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  width: 100%;
  max-width: 1152px;
  margin-left: auto;
  margin-right: auto;
}

.c0 * {
  box-sizing: inherit;
}

@media only screen and (min-width:481px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

<div
  className="c0"
>
  Grommet App
</div>
`;

exports[`Grommet inline renders 1`] = `
.c0 {
  font-family: 'Work Sans', Arial, sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  width: 100%;
  max-width: 1152px;
  margin-left: auto;
  margin-right: auto;
  position: relative;
}

.c0 * {
  box-sizing: inherit;
}

@media only screen and (min-width:481px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

<div
  className="c0"
>
  Grommet App
</div>
`;

exports[`Grommet renders 1`] = `
.c0 {
  font-family: 'Work Sans', Arial, sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  width: 100%;
  max-width: 1152px;
  margin-left: auto;
  margin-right: auto;
}

.c0 * {
  box-sizing: inherit;
}

@media only screen and (min-width:481px) {
  .c0 {
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    height: 100%;
    width: 100%;
    overflow: visible;
  }
}

<div
  className="c0"
/>
`;
